<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignupBasicInfo"
    android:background="@color/cardview_light_background"
    >

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_title_appname"
                android:textSize="15pt"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/header_register"
                android:textSize="10pt"
                android:textColor="@color/design_default_color_on_secondary" />
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gname_til"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            app:hintTextAppearance="@style/Custom_HintStyle"
            android:textColorHint="@color/indian_red"
            style="@style/Custom_boxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_givenName"
                android:textSize="10pt"
                android:textColor="@color/indian_red"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mname_til"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            app:hintTextAppearance="@style/Custom_HintStyle"
            android:textColorHint="@color/indian_red"
            style="@style/Custom_boxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_middleName"
                android:textSize="10pt"
                android:textColor="@color/indian_red"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fname_til"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            app:hintTextAppearance="@style/Custom_HintStyle"
            android:textColorHint="@color/indian_red"
            style="@style/Custom_boxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_familyName"
                android:textSize="10pt"
                android:textColor="@color/indian_red"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/suff_til"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            app:hintTextAppearance="@style/Custom_HintStyle"
            android:textColorHint="@color/indian_red"
            style="@style/Custom_boxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_suffix"
                android:textSize="10pt"
                android:textColor="@color/indian_red"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/toVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round_primary"
            android:text="@string/label_nextPage"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="8pt"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>