<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignupAdditionalInfo"
    android:background="@color/cardview_light_background"
    >

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avax"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/one_last_step"
                android:textSize="12pt"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_on_secondary" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/gender_til"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:endIconMode="dropdown_menu"
                    android:hint="@string/hint_gender"
                    app:hintTextAppearance="@style/Custom_HintStyle"
                    android:textColorHint="@color/indian_red"
                    android:layout_marginRight="5dp"
                    style="@style/Custom_Spinner">
                        <AutoCompleteTextView
                            android:id="@+id/gender_act"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none"
                            android:background="@null"
                            android:textColor="@color/indian_red"
                            />
                </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/bdate_til"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   app:endIconMode="custom"
                   android:layout_marginLeft="5dp"
                   android:textColorHint="@color/indian_red"
                   app:endIconDrawable="@drawable/ic_baseline_date_range_24"
                   app:hintTextAppearance="@style/Custom_HintStyle"
                   style="@style/Custom_boxStyle">
                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:hint="@string/hint_birthdate"
                       android:textColor="@color/indian_red"
                       />
               </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_contact_info"
            android:textColor="@color/design_default_color_on_secondary"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_til"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            app:hintTextAppearance="@style/Custom_HintStyle"
            android:textColorHint="@color/indian_red"
            style="@style/Custom_boxStyle"
            >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_contact"
                    android:textSize="8pt"
                    android:textColor="@color/indian_red"
                    android:inputType="textEmailAddress"
                    />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address1_til"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            app:hintTextAppearance="@style/Custom_HintStyle"
            android:textColorHint="@color/indian_red"
            style="@style/Custom_boxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address1"
                android:textSize="8pt"
                android:textColor="@color/indian_red"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address2_til"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            app:hintTextAppearance="@style/Custom_HintStyle"
            android:textColorHint="@color/indian_red"
            style="@style/Custom_boxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address2"
                android:textSize="8pt"
                android:textColor="@color/indian_red"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_til"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            app:hintTextAppearance="@style/Custom_HintStyle"
            android:textColorHint="@color/indian_red"
            style="@style/Custom_boxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                android:textSize="8pt"
                android:textColor="@color/indian_red"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/toCreateAddInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round_primary"
            android:text="@string/label_nextPage"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="8pt"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/toSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/label_skip"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="8pt" />
    </LinearLayout>

</RelativeLayout>