<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".views.Startup">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="350dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/avax"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startup_welcome"
            android:textSize="15pt"
            android:textColor="@color/design_default_color_on_secondary"
            android:textAlignment="center"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <Button
                android:id="@+id/goto_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round_primary"
                android:text="@string/label_login"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="8pt"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:textSize="8pt"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/design_default_color_on_secondary"
                />
            <Button
                android:id="@+id/goto_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/label_create_account"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="8pt"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>